# tremor

./: .gitignore  README.md  pyproject.toml
docs/: causal_event_study_plan.md  data_sources.md  pipeline_walkthrough.md
scripts/: causal_pipeline.py  db_cli.py  ingest.py  seed_transforms.py  test_pipeline.py
tests/: conftest.py  test_causal_tests.py  test_events.py  test_propagation.py  test_signals.py
tremor/: app.py  config.py
tremor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tremor/api/: causal_tests.py  events.py  monitor.py  signals.py
tremor/causal/: baselines.py  event_study.py  network.py
tremor/core/: propagation.py  shock_detector.py  signal_factory.py
tremor/ingestion/: base.py  normaliser.py
tremor/ingestion/api/: cme_fedwatch.py  fred.py  polygon.py
tremor/ingestion/scrapers/: browser.py  fed_scraper.py  llm_extractor.py  rss_scraper.py  whitehouse_scraper.py
tremor/market_data/: fetcher.py
tremor/models/: database.py  schemas.py
